[gd_scene load_steps=5 format=3 uid="uid://dq4jcgjndycyl"]

[ext_resource type="Script" path="res://Scripts/racecar.gd" id="1_xv4uw"]
[ext_resource type="Texture2D" uid="uid://bys5jfqcu8v27" path="res://Textures/placeholder_car_2.png" id="2_1ko0k"]
[ext_resource type="Texture2D" uid="uid://doxnw8vkcqiag" path="res://Textures/debug_vector.png" id="2_4oll1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1j6se"]
size = Vector2(32, 80)

[node name="Racecar" type="CharacterBody2D"]
collision_mask = 65534
script = ExtResource("1_xv4uw")

[node name="placeholder" type="Sprite2D" parent="."]
texture = ExtResource("2_1ko0k")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1j6se")

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1

[node name="normal_rot" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 1, 0.501961)
z_index = 50
z_as_relative = false
texture = ExtResource("2_4oll1")
offset = Vector2(0, -32)

[node name="sliding_rot_cos" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0.501961, 0.501961)
z_index = 50
z_as_relative = false
texture = ExtResource("2_4oll1")
offset = Vector2(0, -32)

[node name="last_coll_rot" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0, 0.501961)
z_index = 50
z_as_relative = false
texture = ExtResource("2_4oll1")
offset = Vector2(0, -32)

[node name="new_rot" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 0.501961)
z_index = 50
z_as_relative = false
texture = ExtResource("2_4oll1")
offset = Vector2(0, -32)
